--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # production
 /build
 
+/.idea
 # misc
 .DS_Store
 .env.local
@@ -21,4 +22,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/src/image/
+/src/image/*
+
+#storybook build directory
+storybook-static
+
