npm publish fix

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "@moskalenko9381/react-lovely-animations",
+  "name": "react-lovely-animations",
   "version": "0.1.0",
   "author": {
     "name": "Elisabeth Moskalenko",
     "email": "elisabeth.moskk@gmail.com"
   },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/moskalenko9381"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/moskalenko9381/react-lovely-animations.git"
   },
   "private": true,
   "type": "module",
