--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,14 +11,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 18
-          registry-url: https://registry.npmjs.org/
+          node-version: '19.*'
+          registry-url: 'https://registry.npmjs.org/'
+
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Publish to npm
         run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_SECRET}}
